<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4E6F4"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bmiIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bmilogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ImageStyle_Corners_Rounded"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="316dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        app:cardBackgroundColor="#FEFEFE"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="@+id/bmiIcon"
        app:layout_constraintTop_toBottomOf="@+id/bmiIcon">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_of_healthy_people"
                        android:src="@drawable/healthy_people"
                        tools:ignore="ImageContrastCheck"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="54dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWeight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="#FEFEFE"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/bmiIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/weightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weightEt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/_0"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/weightTxt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/weightTxt"
                app:layout_constraintTop_toBottomOf="@+id/weightTxt"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:autofillHints="0" />

            <TextView
                android:id="@+id/kgTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toEndOf="@+id/weightEt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.873" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#FEFEFE"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/cardViewWeight"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hight"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/hightEt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/_0"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/hightTxt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/hightTxt"
                app:layout_constraintTop_toBottomOf="@+id/hightTxt"
                android:autofillHints="" />

            <TextView
                android:id="@+id/cmTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toEndOf="@+id/hightEt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.873" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#35A5E6"
        android:elevation="20dp"
        android:text="@string/calculate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeight"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#FEFEFE"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="@+id/calBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/calBtn"
        app:layout_constraintTop_toBottomOf="@+id/calBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/countTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/_0"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resultTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/health"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/countTxt"
                app:layout_constraintStart_toStartOf="@+id/countTxt"
                app:layout_constraintTop_toBottomOf="@+id/countTxt" />

            <TextView
                android:id="@+id/rangeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/range"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/resultTxt"
                app:layout_constraintStart_toStartOf="@+id/resultTxt"
                app:layout_constraintTop_toBottomOf="@+id/resultTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>